# snap-http

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: daily.yml  generate-tpm-vm.yml  integration-test.yml  integration-tpm.yml  test.yml
debian/: changelog  control  copyright  gbp.conf  rules
debian/source/: options
snap_http/: __init__.py  api.py  http.py  types.py
snap_http/api/: __init__.py  apps.py  assertions.py  changes.py  confdb.py  fde.py  interfaces.py  model.py  options.py  snaps.py  snapshots.py  systems.py  users.py  validation_sets.py
tests/: conftest.py  test_api.py  utils.py
tests/integration/: conftest.py  test_api.py  test_apps.py  test_assertions.py  test_confdb.py  test_options.py  test_snaps.py  test_snapshots.py
tests/integration/assets/: hello_world_snap_declaration.assert  network_confdb_schema.assert  st3v3nmw_account.assert  st3v3nmw_account_key_1.assert
tests/integration/test_snap/: setup.py
tests/integration/test_snap/snap/: snapcraft.yaml
tests/integration/test_snap/snap/hooks/: configure
tests/integration/test_snap/test_snap/: bye-svc  hello-svc
tests/integration_tpm/: test_api.py
tests/integration_tpm/assets/: OVMF_CODE_4M.ms.fd  OVMF_VARS_4M.ms.fd  OVMF_VARS_4M_vm.ms.fd  run_tests.sh
tests/integration_tpm/assets/swtpm/: tpm2-00.permall
tests/unit/: test_api.py  test_http.py  test_types.py
tests/unit/api/: conftest.py  test_apps.py  test_assertions.py  test_changes.py  test_confdb.py  test_fde.py  test_interfaces.py  test_model.py  test_options.py  test_snaps.py  test_snapshots.py  test_systems.py  test_users.py  test_validation_sets.py
