[tool.poetry]
name = "snap-http"
version = "1.8.0"
description = "A library for interacting with snapd via its REST API."
authors = ["Mitch Burton <mitch.burton@canonical.com>"]
readme = "README.md"
exclude = [
    "tests/"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.ruff]
exclude = [
    ".tox",
    "snap_http/__init__.py",
]

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
