[tool.poetry]
name = "snap-http"
version = "1.10.1"
description = "A library for interacting with snapd via its REST API."
authors = ["Mitch Burton <mitch.burton@canonical.com>"]
readme = "README.md"
exclude = [
    "tests/"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
tox = "^4.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
mypy = "^1.14.1"

[tool.ruff]
exclude = [
    ".tox",
    "snap_http/__init__.py",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
